syntax = "proto3";

package api.sastoj.admin.judge.service.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "sastoj//api/sastoj/admin/judge/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.sastoj.admin.judge.service.v1";

service Judge {
	rpc SubmitJudge (SubmitJudgeRequest) returns (SubmitJudgeReply){
		option (google.api.http) = {post: "/judge/{submission_id}" body: "*"};
	};
	rpc GetJudgableProblems (GetJudgableProblemsRequest) returns (GetJudgableProblemsReply){
		option (google.api.http) = {get: "/judge"};
	};
	rpc GetSubmissions (GetSubmissionsRequest) returns (GetSubmissionsReply){
		option (google.api.http) = {get: "/judge/{problem_id}"};
	};
}

message Problem {
	int64 id = 1;
	string title = 2;
	string content = 3;
	int32 point = 4;
	int64 contest_id = 5;
	int32 case_version = 6;
	int32 index = 7;
	string config = 8;
}

message Submission {
	int64 id = 1;
	string code = 2;
	int32 status = 3;
	int32 point = 4;
	google.protobuf.Timestamp create_time = 5;
}

message SubmitJudgeRequest {
	int64 submission_id = 1;
	int32 point = 2;
}
message SubmitJudgeReply {
}

message GetJudgableProblemsRequest {
}
message GetJudgableProblemsReply {
	repeated Problem results = 1;
}

message GetSubmissionsRequest{
	int64 problem_id = 1;
	int32 status = 2;
}
message GetSubmissionsReply {
	repeated Submission submissions = 1;
}